Reposition badge further from button icon to prevent overlap

--- a/src/Organizer.SPA/src/app/home/home.component.scss
+++ b/src/Organizer.SPA/src/app/home/home.component.scss
@@ -14,8 +14,8 @@
 
 .selection-badge {
     position: absolute;
-    bottom: -4px;
-    right: -4px;
+    bottom: -6px;
+    right: -6px;
     background-color: #f44336;
     color: white;
     border-radius: 50%;
